[package]
name = "liblz4stego"
version = "0.1.0"
authors = ["Mateusz Maćkowski <mateusz@mackowski.org>"]
edition = "2018"

readme = "../README.md"
license = "MIT"
homepage = "https://github.com/m4tx/lz4stego"
repository = "https://github.com/m4tx/lz4stego"
description = "An implementation of a bit recycling steganography for the LZ4 compression algorithm"

[dependencies]
byteorder = "1.4"
bitfield = "0.13"
xxhash-rust = { version = "0.8", features = ["xxh32"]}
log = "0.4"

[dev-dependencies]
lz4 = "1.23"
